# Treeble

./: .gitignore  .saucer  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.sh  description.md  treeble.desktop
.agents/skills/nanoForge/: SKILL.md
.agents/skills/software-ui-ux-design/: SKILL.md
.agents/skills/software-ui-ux-design/assets/: design-brief.md  ux-review-checklist.md
.agents/skills/software-ui-ux-design/assets/accessibility/: template-wcag-testing.md
.agents/skills/software-ui-ux-design/assets/audits/: cro-audit-template.md  simplification-audit-template.md
.agents/skills/software-ui-ux-design/assets/component-libraries/: template-mui-material-ui.md  template-shadcn-ui.md
.agents/skills/software-ui-ux-design/assets/design-systems/: template-design-system.md
.agents/skills/software-ui-ux-design/assets/interaction-patterns/: template-micro-interactions.md
.agents/skills/software-ui-ux-design/assets/ui-generation/: full-ui-spec.md
.agents/skills/software-ui-ux-design/data/: sources.json
.agents/skills/software-ui-ux-design/references/: ai-automation-ux.md  ai-design-tools-2025.md  component-library-comparison.md  cro-framework.md  cultural-design-patterns.md  dark-mode-theming.md  data-visualization-ux.md  demographic-inclusive-design.md  design-systems.md  form-design-patterns.md  frontend-aesthetics-2025.md  implementation-research-workflow.md  mobile-ux-patterns.md  modern-ux-patterns-2025.md  neurodiversity-design.md  nielsen-heuristics.md  operational-playbook.md  performance-ux-vitals.md  prototype-to-production.md  simplification-patterns.md  typography-systems.md  ui-generation-workflows.md  wcag-accessibility.md
.codereview/findings/: f_20260623202035_0786.json  f_20260623202035_2022.json  f_20260623202035_4891.json  f_20260623202035_5569.json  f_20260623202035_7295.json  f_20260623202035_7300.json  f_20260623202035_8662.json  f_20260624165001_3438.json  f_20260624165001_3459.json  f_20260624165001_3627.json  f_20260624165001_7568.json  f_20260624165001_9243.json  f_20260625081831_5524.json  f_20260625082228_8479.json  f_20260625084808_7115.json  f_20260625085727_1937.json
.codereview/reports/: report-20260623-202040.md  report-20260623-202628.md  report-20260624-165004.md  report-20260624-165421.md
.github/workflows/: release.yml
docs/: tech-spec.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FileTree.tsx  HeaderBar.tsx  PlayerBar.tsx  StatusBar.tsx  TitleBar.tsx  Toast.tsx  TrackList.tsx
frontend/src/components/ui/: dropdown-menu.tsx  popover.tsx  scroll-area.tsx  slider.tsx  toaster.tsx  tooltip.tsx
frontend/src/lib/: i18n.ts  ipc.ts
frontend/src/locales/: cs.json  de.json  el.json  en.json  es-MX.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  pl.json  pt-BR.json  pt.json  ru.json  tr.json  uk.json  vi.json  zh-TW.json  zh.json
frontend/src/stores/: playerStore.ts  toastStore.ts
scripts/: package-appimage.sh  package-deb.sh  package-rpm.sh
src/: Types.h  main.cpp
src/audio/: IAudioBackend.h  WebViewAudioBackend.cpp  WebViewAudioBackend.h
src/fs/: FileScanner.cpp  FileScanner.h
src/ipc/: IPCHandler.cpp  IPCHandler.h
src/metadata/: TagReader.cpp  TagReader.h
src/mpris/: MPRIS2.cpp  MPRIS2.h
src/tray/: SystemTray.cpp  SystemTray.h
src/web/: ResourceServer.cpp  ResourceServer.h
